Fusion-Qa-Final/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>PICK2__c</fullName>
        <label>PICK2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Item1</fullName>
                </value>
                <value>
                    <fullName>Item2</fullName>
                </value>
                <value>
                    <fullName>item3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_Annual_Sales__c</fullName>
        <label>Potential Annual YETI Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Brands_Carried__c</fullName>
        <label>Premium Brands Carried</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arc&apos;Teryx</fullName>
                </value>
                <value>
                    <fullName>Benelli</fullName>
                </value>
                <value>
                    <fullName>Beretta</fullName>
                </value>
                <value>
                    <fullName>Big Green Egg</fullName>
                </value>
                <value>
                    <fullName>Bote Boards</fullName>
                </value>
                <value>
                    <fullName>Burton</fullName>
                </value>
                <value>
                    <fullName>Costa Del Mar</fullName>
                </value>
                <value>
                    <fullName>Filson</fullName>
                </value>
                <value>
                    <fullName>G.Loomis</fullName>
                </value>
                <value>
                    <fullName>Gerber</fullName>
                </value>
                <value>
                    <fullName>GoPro</fullName>
                </value>
                <value>
                    <fullName>Mathew&apos;s Bows</fullName>
                </value>
                <value>
                    <fullName>Maui Jim</fullName>
                </value>
                <value>
                    <fullName>Oakley</fullName>
                </value>
                <value>
                    <fullName>Ray Ban</fullName>
                </value>
                <value>
                    <fullName>Sage</fullName>
                </value>
                <value>
                    <fullName>Shimano</fullName>
                </value>
                <value>
                    <fullName>Simms</fullName>
                </value>
                <value>
                    <fullName>Sitka</fullName>
                </value>
                <value>
                    <fullName>Smith &amp; Wesson</fullName>
                </value>
                <value>
                    <fullName>Southern Tide</fullName>
                </value>
                <value>
                    <fullName>Specialized</fullName>
                </value>
                <value>
                    <fullName>Stihl</fullName>
                </value>
                <value>
                    <fullName>Swarovski</fullName>
                </value>
                <value>
                    <fullName>Thule</fullName>
                </value>
                <value>
                    <fullName>Trek</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Billing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Leave this checked so it will sync with Epcior! Thanks -RH</description>
        <inlineHelpText>Leave this checked so it will sync with Epcior! Thanks -RH</inlineHelpText>
        <label>Primary Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Purchasing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Purchasing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product1__c</fullName>
        <label>Product1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rambler10</fullName>
                </value>
                <value>
                    <fullName>Rambler20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <label>Product2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product3__c</fullName>
        <label>Product3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <label>Product Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rambler</fullName>
                </value>
                <value>
                    <fullName>Hopper</fullName>
                </value>
                <value>
                    <fullName>Tundra</fullName>
                </value>
                <value>
                    <fullName>Gear &amp; Accessories</fullName>
                </value>
                <value>
                    <fullName>RAMBLER 20 OZ. TUMBLER</fullName>
                </value>
                <value>
                    <fullName>RAMBLER 10 OZ. LOWBALL</fullName>
                </value>
                <value>
                    <fullName>RAMBLER 18 OZ. BOTTLE</fullName>
                </value>
                <value>
                    <fullName>RAMBLER 36 OZ. BOTTLE</fullName>
                </value>
                <value>
                    <fullName>RAMBLER GALLON JUG</fullName>
                </value>
                <value>
                    <fullName>RAMBLER 30 OZ. TUMBLER</fullName>
                </value>
                <value>
                    <fullName>RAMBLER COLSTER</fullName>
                </value>
                <value>
                    <fullName>RAMBLER 26 OZ. BOTTLE</fullName>
                </value>
                <value>
                    <fullName>RAMBLER HALF GALLON JUG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qty1__c</fullName>
        <label>Qty1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty2__c</fullName>
        <label>Qty2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty3__c</fullName>
        <label>Qty3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSD Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSM_Denied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSD Denied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rambler_Actual_Quantity__c</fullName>
        <inlineHelpText>MINIMUM OF 24 UNITS</inlineHelpText>
        <label>Rambler Actual Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rambler_Case_Quantity__c</fullName>
        <label>Rambler Case Quantity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>24-95 UNITS</fullName>
                </value>
                <value>
                    <fullName>96-300 UNITS</fullName>
                </value>
                <value>
                    <fullName>300+ UNITS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rambler_Logo__c</fullName>
        <label>Rambler Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rambler__c</fullName>
        <label>Rambler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReconciliationAccount__c</fullName>
        <label>ReconciliationAccount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retail Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Soft_Side_Cooler_Products__c</fullName>
        <description>SOFT-SIDE COOLER PRODUCT(S)</description>
        <inlineHelpText>YETI HOPPER CANNOT BE CUSTOMIZED</inlineHelpText>
        <label>Soft-Side Cooler Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOPPER FLIP 8</fullName>
                </value>
                <value>
                    <fullName>HOPPER FLIP 12</fullName>
                </value>
                <value>
                    <fullName>HOPPER FLIP 18</fullName>
                </value>
                <value>
                    <fullName>HOPPER TWO 20</fullName>
                </value>
                <value>
                    <fullName>HOPPER TWO 30</fullName>
                </value>
                <value>
                    <fullName>HOPPER TWO 40</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tundra_Logo__c</fullName>
        <label>Tundra Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tundra_Or_Tank_Actual_Quantity__c</fullName>
        <inlineHelpText>ORDER MINIMUMS APPLY</inlineHelpText>
        <label>Tundra Or Tank Actual Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tundra_Or_Tank_Unit_Quantity__c</fullName>
        <defaultValue>&quot;Please Select From DropDown&quot;</defaultValue>
        <label>Tundra Or Tank Unit Quantity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>20-50</fullName>
                </value>
                <value>
                    <fullName>51-90</fullName>
                </value>
                <value>
                    <fullName>91+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tundra__c</fullName>
        <label>Tundra</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tundra_or_Tank_Color__c</fullName>
        <label>Tundra or Tank Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WHITE</fullName>
                </value>
                <value>
                    <fullName>DESERT TAN</fullName>
                </value>
                <value>
                    <fullName>ICE BLUE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type1__c</fullName>
        <label>Type1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type2__c</fullName>
        <label>Type2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type3__c</fullName>
        <label>Type3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Contact_Dupes_Ignored__c</fullName>
        <description>If a record is created with RingLead Unique Entry, this field will reflect the number of possible duplicate Contacts that were presented to the user at the time they created it.</description>
        <label>Contact Dupes Ignored</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Lead_Dupes_Ignored__c</fullName>
        <description>If a record is created with RingLead Unique Entry, this field will reflect the number of possible duplicate Leads that were presented to the user at the time they created it.</description>
        <label>Lead Dupes Ignored</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upload_Exterior_and_Storefront__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This includes: parking lot, counters, merchandising of premium brands (MINIMUM 2)</inlineHelpText>
        <label>Upload Exterior and Storefront</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upload_List_of_Locations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload List of Locations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Was_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Was Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Welcome_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically send welcome kit to new dealer upon lead conversion.</description>
        <inlineHelpText>Automatically send welcome kit to new dealer upon lead conversion.</inlineHelpText>
        <label>Welcome Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Why_Enhance_Brand__c</fullName>
        <label>Will They Enhance our Brand, How?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Why_YETI_Dealer__c</fullName>
        <label>Why Should They Be a YETI Dealer?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Years_In_Business__c</fullName>
        <label>Years In Business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Create_in_Zendesk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create in Zendesk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Status__c</fullName>
        <label>Last Sync Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Result__c</fullName>
        <label>Zendesk Support Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_OutofSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zendesk Support Out of Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_id__c</fullName>
        <label>Zendesk Support User Id</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_oldTags__c</fullName>
        <label>Zendesk Support Old Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__isCreatedUpdatedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCreatedUpdatedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>five_mins__c</fullName>
        <formula>(NOW()  -  0.038)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>five mins</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>form_test__c</fullName>
        <formula>IF(AND(NOT(ISPICKVAL(Status, &quot;Converted&quot;)),NOT(ISPICKVAL(Status, &quot;Not Qualified&quot;)), NOT(ISNULL(First_Activity_Date__c) ) ) 
, &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>form test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pick1__c</fullName>
        <label>pick1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAT1</fullName>
                </value>
                <value>
                    <fullName>Cat2</fullName>
                </value>
                <value>
                    <fullName>cat3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test12__c</fullName>
        <displayFormat>{000000000}</displayFormat>
        <label>test12</label>
        <type>AutoNumber</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>Customer_Industry__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Not Converted - Other,Not Converted - Disqualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>BizDev_Collegiate_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>BizDev-Collegiate</label>
        <queue>BizDev_Collegiate</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BizDev_Corporate_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>BizDev-Corporate</label>
        <queue>BizDev_Corporate</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BizDev_Escalation_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>BizDev Escalation Queue</label>
        <queue>BizDev_Escalation_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BizDev_Green_grass_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>BizDev-Green grass</label>
        <queue>BizDev_Green_grass</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BizDev_Large_Opps_Partnerships_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>BizDev-Large Opps. &amp; Partnerships</label>
        <queue>BizDev_Large_Opps_Partnerships</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BizDev_Lead_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>BizDev-Lead</label>
        <queue>BizDev_Lead</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BizDev_Licensed_product_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>BizDev-Licensed product</label>
        <queue>BizDev_Licensed_product</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BizDev_Premco_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>BizDev-Premco</label>
        <queue>BizDev_Premco</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bizdev_Promotional_Goods_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Bizdev-Promotional Goods</label>
        <queue>Bizdev_Promotional_Goods</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Default_Lead_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Default Lead Queue</label>
        <queue>Default_Lead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fundraising_Conservation_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Fundraising-Conservation</label>
        <queue>Fundraising_Conservation</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fundraising_Fundraising_Genera_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Fundraising-Fundraising Genera</label>
        <queue>Fundraising_Fundraising_Genera</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fundraising_Lead_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Fundraising-Lead</label>
        <queue>Fundraising_Lead</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <recordTypes>
        <fullName>BizDev</fullName>
        <active>true</active>
        <businessProcess>BizDev Lead Process</businessProcess>
        <label>BizDev</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Development</fullName>
        <active>true</active>
        <businessProcess>Business Dev</businessProcess>
        <label>Business Development</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dealer</fullName>
        <active>true</active>
        <businessProcess>Dealer</businessProcess>
        <label>Dealer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dealer_Canada</fullName>
        <active>true</active>
        <businessProcess>Dealer</businessProcess>
        <label>Dealer Canada</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default_Lead_Layout</fullName>
        <active>true</active>
        <businessProcess>Fundraising Lead Process</businessProcess>
        <label>Default Lead Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fundraising</fullName>
        <active>true</active>
        <businessProcess>Fundraising Lead Process</businessProcess>
        <label>Fundraising</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outfitters</fullName>
        <active>true</active>
        <businessProcess>Outfitters</businessProcess>
        <label>Outfitters</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outside_Sales</fullName>
        <active>true</active>
        <businessProcess>Outside Sales Lead Process</businessProcess>
        <label>Outside Sales</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_Name_Limited_to_50Char</fullName>
        <active>false</active>
        <description>This validation limits the Account Name field to 50 characters so it will not error out when sync with Epicor whose limit is 50 characters</description>
        <errorConditionFormula>LEN( Company )&gt;50</errorConditionFormula>
        <errorDisplayField>Company</errorDisplayField>
        <errorMessage>Account Name needs to be under 50 characters to sync with Epicor!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Address_is_required_to_convert</fullName>
        <active>false</active>
        <description>A complete address is required to convert a lead.</description>
        <errorConditionFormula>AND(OR(ISBLANK(Street),ISBLANK(City),ISBLANK(State),ISBLANK(PostalCode),ISBLANK(Country)),IsConverted)</errorConditionFormula>
        <errorMessage>A complete address is required to convert a lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Approved_by_VP</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
IsConverted, 
AND($Profile.Name != &apos;YETI Executives&apos;, $Profile.Name !=&apos;system administrator&apos;, $Profile.Name !=&apos;Support Team User - Custom Logo&apos;), 
NOT( Approved_by_VP_of_Sales__c ), 
RecordType.Name = &apos;Dealer&apos; 
)</errorConditionFormula>
        <errorMessage>Your Lead needs to be approved by your VP.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_group_is_required</fullName>
        <active>false</active>
        <description>A customer group is required to convert a lead.</description>
        <errorConditionFormula>AND(ISBLANK(YETIUNITY_Customer_Group__c),IsConverted)</errorConditionFormula>
        <errorMessage>A customer group is required to convert a lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EDI_Store_ID_Num_Only</fullName>
        <active>false</active>
        <description>verifies this is a number only.</description>
        <errorConditionFormula>AND(
  NOT(ISBLANK( EDI_Store_Number__c )),
  NOT(ISNUMBER( EDI_Store_Number__c )) 
)</errorConditionFormula>
        <errorDisplayField>EDI_Store_Number__c</errorDisplayField>
        <errorMessage>CAN ONLY BE A NUMBER (No letters or special characters)!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_Required_rule</fullName>
        <active>true</active>
        <description>E Mail shouldn&apos;t be Blank</description>
        <errorConditionFormula>ISBLANK(Email)</errorConditionFormula>
        <errorMessage>Please enter the Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_is_required</fullName>
        <active>true</active>
        <description>An email address is required to convert a lead.</description>
        <errorConditionFormula>AND(ISBLANK(Email),IsConverted)</errorConditionFormula>
        <errorMessage>An email address is required to convert a lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_is_required_for_Email_invoice_pref</fullName>
        <active>false</active>
        <description>A company email is required for to convert a lead with an email invoice preference.</description>
        <errorConditionFormula>AND(ISBLANK(Company_Email__c), ISPICKVAL(Invoice_Preference__c,&apos;EMail&apos;),IsConverted)</errorConditionFormula>
        <errorMessage>A company email is required for to convert a lead with an email invoice preference.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Industry_is_required</fullName>
        <active>false</active>
        <description>An Industry is required to convert a lead.</description>
        <errorConditionFormula>AND(text(Industry) = &quot;&quot;,IsConverted)</errorConditionFormula>
        <errorMessage>An industry is required to convert a lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Disqualify_Reason_Required</fullName>
        <active>false</active>
        <description>This rule enforces the user to enter a disqualification reason when ever he wants to change the status to Not Qualified.</description>
        <errorConditionFormula>IF( AND( ISPICKVAL(Status,&quot;Not Qualified&quot;),ISBLANK(Disqualification_Reason__c)) , true, false)</errorConditionFormula>
        <errorDisplayField>Disqualification_Reason__c</errorDisplayField>
        <errorMessage>Please enter the Disqualification reason for Not Qualified Leads.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Must_Be_Approved_To_Convert</fullName>
        <active>false</active>
        <description>The lead must be approved to be converted.</description>
        <errorConditionFormula>AND(NOT(Approved__c),IsConverted)</errorConditionFormula>
        <errorMessage>The lead must be approved to be converted.</errorMessage>
    </validationRules>
</CustomObject>